homelab/kubernetes/istio-ingress/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    istio.io/dataplane-mode: ambient
